syntax = "proto3";

package vega.commands.v1;
option go_package = "code.vegaprotocol.io/protos/vega/commands/v1";

import "vega/commands/v1/commands.proto";
import "vega/commands/v1/validator_commands.proto";
import "vega/commands/v1/oracles.proto";
import "vega/commands/v1/signature.proto";

message InputData {
  // A number to provide uniqueness to prevent accidental replays and,
  // in combination with `block_height`, deliberate attacks.
  // A nonce provides uniqueness for otherwise identical transactions,
  // ensuring that the transaction hash uniquely identifies a specific transaction.
  // Granted all other fields are equal, the nonce can either be a counter
  // or generated at random to submit multiple transactions within the same
  // block (see below), without being identified as replays.
  // Please note that Protocol Buffers do not have a canonical, unique encoding
  // and therefore different libraries or binaries may encode the same message
  // slightly differently, causing a different hash.
  uint64 nonce = 1;

  // The block height at which the transaction was made.
  // This should be the current block height. The transaction will be valid
  // from the block and up to the `tolerance` block height.
  // Example: If the network has a tolerance of 150 blocks and `block_height`
  // is set to `200`, then the transaction will be valid until block `350`.
  // Note that a `block_height` that is ahead of the real block height will be
  // rejected. The tolerance can be queried from the chain's network parameters.
  // `block_height` prevents replay attacks in conjunction with `nonce` (see above).
  uint64 block_height = 2;

  oneof command {
    // User commands
    OrderSubmission order_submission = 1001;
    OrderCancellation order_cancellation = 1002;
    OrderAmendment order_amendment = 1003;
    WithdrawSubmission withdraw_submission = 1004;
    ProposalSubmission proposal_submission = 1005;
    VoteSubmission vote_submission = 1006;
    LiquidityProvisionSubmission liquidity_provision_submission = 1007;
    DelegateSubmission delegate_submission = 1008;
    UndelegateSubmission undelegate_submission = 1009;
    LiquidityProvisionCancellation liquidity_provision_cancellation = 1010;
    LiquidityProvisionAmendment liquidity_provision_amendment = 1011;
    Transfer transfer = 1012;
    CancelTransfer cancel_transfer = 1013;
    AnnounceNode announce_node = 1014;

    // Validator commands
    NodeVote node_vote = 2002;
    NodeSignature node_signature = 2003;
    ChainEvent chain_event = 2004;
    KeyRotateSubmission key_rotate_submission = 2005;
    StateVariableProposal state_variable_proposal = 2006;
    ValidatorHeartbeat validator_heartbeat = 2007;

    // Oracles
    OracleDataSubmission oracle_data_submission = 3001;

    // Checkpoints
    RestoreSnapshot restore_snapshot_submission = 4001;
  }
}

// Represents a transaction to be sent to Vega.
message Transaction {
  // One of the set of Vega commands (proto marshalled).
  bytes input_data = 1;

  // The signature of the inputData.
  Signature signature = 2;

  // The sender of the transaction.
  // Any of the following would be valid:
  oneof from {
    // The address of the sender (hex-encoded). Not supported yet.
    string address = 1001;
    // The public key of the sender (hex-encoded).
    string pub_key = 1002;
  }

  // A version of the transaction, to be used in the future in case changes are implemented
  // to the Transaction format.
  uint32 version = 2000;
}
